--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --check src/**/*.ts",
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
-    "postinstall": "tsc"
+    "postinstall": "tsc && husky install"
   },
   "keywords": [],
   "author": "Wasiq Bhamla",
@@ -37,10 +37,20 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "yargs": "^17.7.2"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "pnpm lint:fix",
+      "pnpm lint",
+      "pnpm format:fix",
+      "pnpm format"
+    ]
   }
 }
