--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "url": "https://github.com/BoykaFramework/boyka-cli"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^1.3.3",
+    "@stylistic/eslint-plugin-ts": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.1",
     "@types/yargs": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -43,6 +45,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@inquirer/prompts": "^3.3.0",
     "yargs": "^17.7.2"
   },
   "lint-staged": {
