--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boyka-cli",
   "version": "0.1.0",
-  "description": "Command line tool for Boyka framework",
+  "description": "🧑🏻‍💻 Command line tool for Boyka framework",
   "main": "./dist/index.js",
   "bin": {
     "boyka": "./dist/index.js"
@@ -12,9 +12,14 @@
     "format": "prettier --check src/**/*.ts",
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
-    "postinstall": "tsc && husky install"
+    "postinstall": "tsc && husky install",
+    "release": "release-it"
   },
-  "keywords": [],
+  "keywords": [
+    "typescript",
+    "cli",
+    "npmtool"
+  ],
   "author": "Wasiq Bhamla",
   "license": "MIT",
   "bugs": {
@@ -28,21 +33,23 @@
     "url": "https://github.com/BoykaFramework/boyka-cli"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin-js": "^1.4.1",
-    "@stylistic/eslint-plugin-ts": "^1.4.1",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@stylistic/eslint-plugin-js": "^1.5.0",
+    "@stylistic/eslint-plugin-ts": "^1.5.0",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.10.4",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.1.0",
-    "typescript": "^5.3.2"
+    "release-it": "^17.0.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.0",
