--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boyka-cli",
+  "name": "@boykaframework/boyka-cli",
   "version": "0.1.0",
   "description": "🧑🏻‍💻 Command line tool for Boyka framework",
   "main": "./dist/index.js",
