--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
     "postinstall": "tsc && husky install",
-    "release": "release-it"
+    "release": "release-it --ci"
   },
   "keywords": [
     "typescript",
