--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,9 @@ updates:
       interval: 'weekly'
       timezone: 'Asia/Calcutta'
     groups:
-      dependencies:
-        dependency-type: 'production'
-      dev-dependencies:
-        dependency-type: 'development'
+      major:
+        update-types: ['major']
+      minor:
+        update-types: ['minor']
+      patch:
+        update-types: ['patch']
