--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --check src/**/*.ts",
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
-    "postinstall": "tsc && husky install",
+    "build": "tsc && husky install",
     "release": "release-it --ci"
   },
   "keywords": [
@@ -51,7 +51,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "release-it": "^17.0.1",
     "typescript": "^5.3.3"
   },
