feat: :sparkles: converting cjs to module in ts

--- a/.release-it.json
+++ b/.release-it.json
@@ -25,15 +25,23 @@
     }
   },
   "github": {
-    "release": true
+    "release": true,
+    "tokenRef": "PUSH_TOKEN",
+    "comments": {
+      "submit": true,
+      "issue": ":rocket: _This issue has been resolved in v${version}. See [${releaseName}](${releaseUrl}) for release notes._",
+      "pr": ":rocket: _This pull request is included in v${version}. See [${releaseName}](${releaseUrl}) for release notes._"
+    }
   },
   "git": {
+    "commit": true,
+    "tag": true,
+    "push": true,
     "commitMessage": "chore: release v${version}",
     "requireCleanWorkingDir": true,
     "requireBranch": "main"
   },
   "npm": {
-    "publish": true,
-    "tokenRef": "PUSH_TOKEN"
+    "publish": true
   }
 }
