--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "description": "🧑🏻‍💻 Command line tool for Boyka framework",
   "main": "./dist/index.js",
+  "type": "module",
   "bin": {
     "boyka": "./dist/index.js"
   },
@@ -38,16 +39,16 @@
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^8.0.1",
-    "@stylistic/eslint-plugin-js": "^1.5.0",
-    "@stylistic/eslint-plugin-ts": "^1.5.0",
+    "@stylistic/eslint-plugin-js": "^1.5.1",
+    "@stylistic/eslint-plugin-ts": "^1.5.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^20.10.4",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
@@ -57,6 +58,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.0",
+    "chalk": "^5.3.0",
     "yargs": "^17.7.2"
   },
   "lint-staged": {
