--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "target": "ES2016",
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
