--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@inquirer/prompts": "^3.3.0",
     "chalk": "^4.1.2",
+    "nanospinner": "^1.1.0",
     "yargs": "^17.7.2"
   },
   "lint-staged": {
