--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,4 +57,4 @@ jobs:
         run: pnpm install && pnpm build
 
       - name: Publish to NPM and GitHub release
-        run: pnpm release --github.preRelease=${{ inputs.pre-release }} --github.draft=${{ inputs.draft }}
+        run: pnpm release ${{ inputs.pre-release && '--no-github.preRelease' || '--github.preRelease' }} ${{ inputs.draft && '--no-github.draft' || '--github.draft' }}
