feat: :sparkles: converting cjs to module in ts (#40)
* feat: :sparkles: converting cjs to module in ts

* fix: :bug: fixed issues while migrating to module

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
     env:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.PUSH_TOKEN }}
 
     steps:
       - name: Check out Git repository
