--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "module": "NodeNext",
+    "target": "ES2022",
+    "moduleResolution": "Node16",
+    "allowJs": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules/**"]
 }
