--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier --check src/**/*.ts",
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
-    "build": "tsc && husky install",
+    "build": "tsc && husky",
     "release": "release-it --ci"
   },
   "keywords": [
@@ -43,10 +43,10 @@
     "@stylistic/eslint-plugin-js": "^2.1.0",
     "@stylistic/eslint-plugin-ts": "^2.1.0",
     "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.2",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -54,13 +54,15 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "liquidjs": "^10.13.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.1",
     "release-it": "^17.3.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^7.12.0"
   },
   "dependencies": {
-    "@inquirer/prompts": "^5.0.4",
+    "@inquirer/confirm": "^3.1.9",
+    "@inquirer/input": "^2.1.9",
+    "@inquirer/select": "^2.3.5",
     "chalk": "^5.3.0",
     "nanospinner": "^1.1.0",
     "yargs": "^17.7.2"
@@ -72,5 +74,6 @@
       "pnpm format:fix",
       "pnpm format"
     ]
-  }
+  },
+  "packageManager": "pnpm@9.2.0"
 }
