--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "dist",
     "module": "NodeNext",
     "target": "ES2022",
-    "moduleResolution": "Node16",
+    "moduleResolution": "NodeNext",
     "allowJs": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
