--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@stylistic/eslint-plugin-js": "^2.1.0",
     "@stylistic/eslint-plugin-ts": "^2.1.0",
     "@tsconfig/node18": "^18.2.4",
+    "@types/figlet": "^1.5.8",
+    "@types/gradient-string": "^1.1.6",
     "@types/node": "^20.14.2",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
@@ -64,6 +66,8 @@
     "@inquirer/input": "^2.1.9",
     "@inquirer/select": "^2.3.5",
     "chalk": "^5.3.0",
+    "figlet": "^1.7.0",
+    "gradient-string": "^2.0.2",
     "nanospinner": "^1.1.0",
     "yargs": "^17.7.2"
   },
