--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier --check src/**/*.ts",
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
-    "build": "tsc && husky install",
+    "build": "tsc && husky",
     "release": "release-it --ci"
   },
   "keywords": [
@@ -43,7 +43,9 @@
     "@stylistic/eslint-plugin-js": "^2.2.0",
     "@stylistic/eslint-plugin-ts": "^2.2.0",
     "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^20.14.2",
+    "@types/figlet": "^1.5.8",
+    "@types/gradient-string": "^1.1.6",
+    "@types/node": "^20.14.8",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
@@ -52,15 +54,20 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
-    "prettier": "^3.3.1",
-    "release-it": "^17.3.0",
-    "typescript": "^5.4.5",
+    "lint-staged": "^15.2.7",
+    "liquidjs": "^10.14.0",
+    "prettier": "^3.3.2",
+    "release-it": "^17.4.0",
+    "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.0"
   },
   "dependencies": {
-    "@inquirer/prompts": "^5.0.5",
+    "@inquirer/confirm": "^3.1.10",
+    "@inquirer/input": "^2.1.10",
+    "@inquirer/select": "^2.3.6",
     "chalk": "^5.3.0",
+    "figlet": "^1.7.0",
+    "gradient-string": "^2.0.2",
     "nanospinner": "^1.1.0",
     "yargs": "^17.7.2"
   },
@@ -71,5 +78,6 @@
       "pnpm format:fix",
       "pnpm format"
     ]
-  }
+  },
+  "packageManager": "pnpm@9.3.0"
 }
