--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 concurrency:
-  group: boyka-labeler-${{ github.ref }}-1
+  group: boyka-cli-labeler-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
