--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "url": "https://github.com/BoykaFramework/boyka-cli"
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
+    "@eslint/js": "^9.7.0",
     "@stylistic/eslint-plugin-js": "^2.3.0",
     "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@tsconfig/node18": "^18.2.4",
@@ -56,7 +56,7 @@
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
@@ -85,6 +85,5 @@
       "pnpm format"
     ]
   },
-  "packageManager": "pnpm@9.3.0",
-  "nx": {}
+  "packageManager": "pnpm@9.4.0"
 }
