--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@boykaframework/boyka-cli",
   "version": "0.6.0",
-  "description": "🧑🏻‍💻 Command line tool for Boyka framework",
+  "description": "🧑🏻‍💻 Command line assistant for Boyka Framework",
   "main": "./dist/index.js",
   "type": "module",
   "bin": {
@@ -18,7 +18,15 @@
     "format:fix": "prettier --write src/**/*.ts",
     "dev": "tsc -w",
     "build": "tsc && husky",
-    "release": "release-it --ci"
+    "changelog": "lerna-changelog",
+    "prerelease": "lerna version --yes --no-git-tag-version --no-push --no-changelog --conventional-commits --preid beta",
+    "release": "lerna version --yes --no-git-tag-version --no-push --no-changelog --conventional-commits",
+    "release:major": "pnpm release major",
+    "release:minor": "pnpm release minor",
+    "release:patch": "pnpm release patch",
+    "prerelease:major": "pnpm prerelease premajor",
+    "prerelease:minor": "pnpm prerelease preminor",
+    "prerelease:patch": "pnpm prerelease prepatch"
   },
   "keywords": [
     "typescript",
@@ -38,33 +46,31 @@
     "url": "https://github.com/BoykaFramework/boyka-cli"
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
-    "@release-it/conventional-changelog": "^8.0.1",
+    "@eslint/js": "^9.7.0",
     "@stylistic/eslint-plugin-js": "^2.3.0",
     "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/figlet": "^1.5.8",
     "@types/gradient-string": "^1.1.6",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "eslint": "^9.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "liquidjs": "^10.14.0",
+    "liquidjs": "^10.15.0",
     "prettier": "^3.3.2",
-    "release-it": "^17.4.0",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.15.0"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
-    "@inquirer/confirm": "^3.1.12",
+    "@inquirer/confirm": "^3.1.14",
     "@inquirer/input": "^2.2.1",
-    "@inquirer/select": "^2.3.8",
+    "@inquirer/select": "^2.3.10",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
@@ -79,5 +85,5 @@
       "pnpm format"
     ]
   },
-  "packageManager": "pnpm@9.3.0"
+  "packageManager": "pnpm@9.4.0"
 }
