--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -25,6 +25,7 @@ env:
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
   GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
   prepare:
@@ -66,7 +67,7 @@ jobs:
 
       - name: Update pre-release version
         if: ${{ inputs.pre-release }}
-        run: pnpm prerelease:${{ inputs.release-type }}
+        run: pnpm release:pre${{ inputs.release-type }}
 
       - name: Update release version
         if: ${{ ! inputs.pre-release }}
@@ -82,7 +83,7 @@ jobs:
         if: ${{ steps.version.outputs.version != null }}
         id: changelog
         run: |
-          export CHANGELOG=$(pnpm --silent changelog --from v${{ steps.old_version.outputs.previous_version }} --next-version v${{ steps.version.outputs.version }})
+          export CHANGELOG=$(pnpm --silent changelog --from ${{ steps.old_version.outputs.previous_version }} --next-version ${{ steps.version.outputs.version }})
           delimiter="$(openssl rand -hex 8)"
           echo "changes<<${delimiter}" >> "${GITHUB_OUTPUT}"
           echo "$CHANGELOG" >> "${GITHUB_OUTPUT}"
