--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "version": "0.6.0",
   "npmClient": "npm",
+  "useWorkspace": false,
   "changelog": {
     "repo": "BoykaFramework/boyka-framework",
     "labels": {
