--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "dev": "tsc -w",
     "build": "tsc && husky",
     "changelog": "lerna-changelog",
-    "prerelease": "lerna version --yes --no-git-tag-version --no-push --no-changelog --conventional-commits --preid beta",
-    "release": "lerna version --yes --no-git-tag-version --no-push --no-changelog --conventional-commits",
-    "release:major": "pnpm release major",
-    "release:minor": "pnpm release minor",
-    "release:patch": "pnpm release patch",
-    "prerelease:major": "pnpm prerelease premajor",
-    "prerelease:minor": "pnpm prerelease preminor",
-    "prerelease:patch": "pnpm prerelease prepatch"
+    "beta": "pnpm stable --preRelease=beta",
+    "stable": "release-it --ci",
+    "release:major": "pnpm stable major",
+    "release:minor": "pnpm stable minor",
+    "release:patch": "pnpm stable patch",
+    "release:premajor": "pnpm beta premajor",
+    "release:preminor": "pnpm beta preminor",
+    "release:prepatch": "pnpm beta prepatch"
   },
   "keywords": [
     "typescript",
@@ -47,30 +47,34 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@release-it-plugins/lerna-changelog": "^7.0.0",
     "@stylistic/eslint-plugin-js": "^2.3.0",
     "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/figlet": "^1.5.8",
     "@types/gradient-string": "^1.1.6",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.11",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.0.11",
+    "lerna-changelog": "^2.2.0",
     "lint-staged": "^15.2.7",
     "liquidjs": "^10.15.0",
     "prettier": "^3.3.3",
+    "release-it": "^17.6.0",
+    "release-it-pnpm": "^4.6.2",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^7.16.1"
   },
   "dependencies": {
-    "@inquirer/confirm": "^3.1.14",
-    "@inquirer/input": "^2.2.1",
-    "@inquirer/select": "^2.3.10",
+    "@inquirer/confirm": "^3.1.15",
+    "@inquirer/input": "^2.2.2",
+    "@inquirer/select": "^2.3.11",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
@@ -85,5 +89,5 @@
       "pnpm format"
     ]
   },
-  "packageManager": "pnpm@9.4.0"
+  "packageManager": "pnpm@9.5.0"
 }
