feat: :construction_worker: updated labeler workflow to run on closed pr

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+    types:
+      - closed
+      - opened
 
 concurrency:
   group: boyka-cli-labeler-${{ github.ref }}
