--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "version": "0.6.0",
-  "npmClient": "npm",
-  "useWorkspace": false,
+  "npmClient": "pnpm",
   "changelog": {
     "repo": "BoykaFramework/boyka-framework",
     "labels": {
