fix: :bug: fixed error while publishing new version

--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -50,7 +50,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install && pnpm build
 
       - name: Get the previous version
         id: old_version
