--- a/.release-it.json
+++ b/.release-it.json
@@ -2,15 +2,10 @@
   "$schema": "https://unpkg.com/release-it@17/schema/release-it.json",
   "plugins": {
     "release-it-pnpm": {
-      "disableRelease": true,
-      "inFile": "CHANGELOG.md"
+      "disableRelease": true
     }
   },
-  "git": {
-    "push": false
-  },
-  "github": {
-    "release": false
-  },
+  "git": false,
+  "github": false,
   "npm": false
 }
