fix: :bug: enabled git without commit, tag and push

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,7 +5,11 @@
       "disableRelease": true
     }
   },
-  "git": false,
+  "git": {
+    "commit": false,
+    "tag": false,
+    "push": false
+  },
   "github": false,
   "npm": false
 }
