fix: :bug: fixed issue with changelog

--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -22,6 +22,7 @@ on:
         default: false
 
 env:
+  GITHUB_AUTH: ${{ secrets.PUSH_TOKEN }}
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
   GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
