--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,9 @@ updates:
     target-branch: 'main'
     versioning-strategy: increase
     open-pull-requests-limit: 100
+    labels:
+      - ':house: pr: internal'
+      - 'javascript'
     reviewers:
       - 'boyka-core'
     schedule:
@@ -17,3 +20,19 @@ updates:
         update-types: ['minor']
       patch:
         update-types: ['patch']
+
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    target-branch: 'main'
+    open-pull-requests-limit: 100
+    labels:
+      - ':house: pr: internal'
+      - 'github_actions'
+    reviewers:
+      - 'boyka-core'
+    schedule:
+      interval: 'weekly'
+      timezone: 'Asia/Calcutta'
+    groups:
+      dependencies:
+        dependency-type: 'production'
