chore: :zap: updated attributes in release-it config

--- a/.release-it.json
+++ b/.release-it.json
@@ -12,6 +12,8 @@
   },
   "github": false,
   "npm": {
-    "publish": true
+    "publish": true,
+    "skipChecks": true,
+    "publishPath": "dist"
   }
 }
