--- a/.release-it.json
+++ b/.release-it.json
@@ -11,6 +11,8 @@
     "commit": true,
     "tag": true,
     "push": true,
+    "commitArgs": ["-S", "--no-verify"],
+    "tagArgs": ["-s"],
     "requireCleanWorkingDir": true
   },
   "github": {
