--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "version": "0.9.0",
   "npmClient": "pnpm",
+  "useWorkspace": false,
   "changelog": {
     "repo": "BoykaFramework/boyka-cli",
     "labels": {
