--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "repository": {
     "url": "https://github.com/BoykaFramework/boyka-cli"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@release-it-plugins/lerna-changelog": "^8.0.1",
